fixed overflow issue with mobile menu

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,700");
 
+html,
+body {
+  overflow: hidden;
+}
+
 body {
   font-family: "Open Sans", sans-serif;
 }
